# card-battle

./: CMakeLists.txt  Makefile  README.md
assets/cards/: cards.json
docs/: Logs.md  ModifyCode.md  info.txt  wxWidgetsInstallation.md
include/: GameManager.h  constants.h
include/boot/: CardHandler.h  CardManager.h  CharacterManager.h
include/boot/ui/: GamePanel.h  GamePanelHelper.h  MainWindow.h  UIManager.h
include/bots/: BasicBot.h
include/cards/: Card.h  EntityCard.h  InstantCard.h
include/cards/entity/: Bank.h  Troll.h
include/cards/instant/: Fireball.h  Heal.h  MeteorShower.h  SoulSteal.h
include/characters/: Character.h  Mage.h  Tank.h
include/characters/heroes/: Mage.h  Tank.h
include/game/: Lane.h  MainBoard.h  MatchManager.h
include/map/: Lane.h  MainBoard.h
include/ui/: CardWidget.h  GamePanel.h  GamePanelHelper.h  MainMenuPanel.h  SettingsPanel.h  wxCustomColours.h
src/: GameManager.cpp
src/boot/: CardHandler.cpp  CardManager.cpp  CharacterManager.cpp
src/boot/ui/: GamePanel.cpp  GamePanelHelper.cpp  MainMenuPanel.cpp  MainWindow.cpp  SettingsPanel.cpp  UIManager.cpp
src/bots/: BasicBot.cpp
src/cards/: Card.cpp  EntityCard.cpp  InstantCard.cpp
src/cards/entity/: Bank.cpp  Troll.cpp
src/cards/instant/: Fireball.cpp  Heal.cpp  MeteorShower.cpp  SoulSteal.cpp
src/characters/: Character.cpp  Mage.cpp  Tank.cpp
src/characters/heroes/: Mage.cpp  Tank.cpp
src/game/: Lane.cpp  MainBoard.cpp  MatchManager.cpp
src/map/: Lane.cpp  MainBoard.cpp
src/ui/: CardWidget.cpp  GamePanel.cpp  GamePanelHelper.cpp  MainMenuPanel.cpp  SettingsPanel.cpp  wxCustomColours.cpp
tests/: main.cpp
